Se modifica docker compose y dockerfile